--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ certifi==2021.10.8
 cycler==0.10.0
 Cython==0.29.24
 kiwisolver==1.3.2
-matplotlib==3.2.2
+matplotlib
 numpy==1.22.0
 Pillow==9.0.1
 pyparsing==2.4.7
